--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ h3 {
 		flex-direction: column;
 		align-items: center;
 		background-color: rgba(0, 0, 0, 0.3);
-		margin-bottom: 15%;
+		margin-bottom: 50px;
 	}
 
 	.footer a {
