--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ h3 {
 
 @media screen and (max-width: 700px) {
 	.header {
-		top: 35%;
+		top: 30%;
 		width: 100%;
 	}
 
@@ -103,7 +103,7 @@ h3 {
 		flex-direction: column;
 		align-items: center;
 		background-color: rgba(0, 0, 0, 0.3);
-		margin-bottom: 100px;
+		margin-bottom: 30%;
 	}
 
 	.footer a {
